--- a/src/components/MovieCard.module.css
+++ b/src/components/MovieCard.module.css
@@ -17,7 +17,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    gap: 0.5rem;
     margin: 0 0 0.2rem 0.2rem;
+}
+
+.movieTitle:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: deepskyblue;
 }
 
 .movieDateAndButton {
