--- a/src/app/search/[term]/page.module.css
+++ b/src/app/search/[term]/page.module.css
@@ -49,8 +49,9 @@
 
 .moviesGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 200px));
   gap: 2rem;
+  justify-content: center;
 }
 
 .noMovies {
